Prevent horizontal scroll due to oversized image in contact page

--- a/contact/stylesheet.less
+++ b/contact/stylesheet.less
@@ -11,8 +11,8 @@
 	text-align: center;
 
 	img {
-		height: 25em;
 		width: 25em;
+		max-width: 90%;
 		border-radius: 50%;
 		border: 1px @verydark solid;
 	}
